# embedded_engineer_interview_practice

./: .gitignore  README.md
practice_1_structs/: main.cpp  problem.md
practice_2_ring_buffer/: main.cpp  problem.md
practice_3_memory_allocator/: main.cpp  problem.md
practice_4_Simulated_UART/: main.cpp  problem.md
practice_4_UART/: main.cpp
practice_5_UART_stm32_to_arduino/: archictecture.md
practice_5_UART_stm32_to_arduino/Nucleo_UART/: .cproject  .project  UART_TO_ARDUINO Debug.launch  UART_TO_ARDUINO.ioc
practice_5_UART_stm32_to_arduino/Nucleo_UART/Core/Inc/: main.h
practice_5_UART_stm32_to_arduino/Nucleo_UART/Core/Src/: CustomUart.cpp  CustomUart.h  cpp_main.cpp  cpp_main.h  main.c  stm32f7xx_hal_msp.c
practice_5_UART_stm32_to_arduino/arduino_UART/: CustomUart.cpp  CustomUart.h  arduino_UART.ino
practice_6_command_parser/: CMakeLists.txt
practice_6_command_parser/include/: CommandParser.h  DebugLogger.h  SoftwareUart.h  basicCommands.h  util.h
practice_6_command_parser/src/: CommandParser.cpp  DebugLogger.cpp  SoftwareUart.cpp  basicCommands.cpp  main.cpp  problem.md  util.cpp
practice_6_command_parser/tests/: tests.cc
practice_7_gene_sequencing/: CMakeLists.txt  gene.txt  main.cpp  problem.md
practice_7_gene_sequencing/include/: gene_sequencing.h
practice_7_gene_sequencing/src/: gene_sequencing.cpp
practice_7_gene_sequencing/tests/: tests.cc
